--- a/style.css
+++ b/style.css
@@ -217,9 +217,6 @@ a {
   border-radius: 15px;
   box-shadow: 0px 0px 18px 0px #f7ce68;
 }
-.feature-img--item:nth-child(2) {
-  box-shadow: 0px 0px 18px 0px #5dadf4;
-}
 
 .footer {
   position: relative;
@@ -325,6 +322,7 @@ a {
   }
   .feature-img--item {
     width: 45%;
+    height: 26.4rem;
   }
 
   .btn--act {
