--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,11 @@ a {
   text-decoration: none;
 }
 
+// .img-feature {
+//   width: 37.5rem;
+//   height: 65.5rem;
+// }
+
 .wrapper {
   position: relative;
   max-width: 140rem;
@@ -225,9 +230,6 @@ a {
       height: 65.5rem;
       border-radius: 15px;
       box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
-      &:nth-child(2) {
-        box-shadow: 0px 0px 18px 0px #5dadf4;
-      }
     }
   }
 }
@@ -339,6 +341,7 @@ a {
     &-img {
       &--item {
         width: 45%;
+        height: 26.4rem;
       }
     }
   }
