--- a/style.scss
+++ b/style.scss
@@ -32,11 +32,6 @@ a {
   text-decoration: none;
 }
 
-// .img-feature {
-//   width: 37.5rem;
-//   height: 65.5rem;
-// }
-
 .wrapper {
   position: relative;
   max-width: 140rem;
@@ -229,7 +224,12 @@ a {
       width: 37.5rem;
       height: 65.5rem;
       border-radius: 15px;
-      box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
+      &:first-child {
+        box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
+      }
+      &:last-child {
+        box-shadow: 0px 0px 18px 0px #7b6ef0;
+      }
     }
   }
 }
