--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ a {
 .feature {
   margin-top: 8rem;
   text-align: center;
-  background-image: linear-gradient(0deg, #8a7efb 0%, #f7ce68 33%, white 66%, white 100%);
+  background-image: linear-gradient(0deg, #fbab7e 0%, #f7ce68 50%, white 100%);
 }
 .feature__info {
   line-height: 1.2;
@@ -220,7 +220,7 @@ a {
   box-shadow: 0px 0px 18px 0px #f7ce68;
 }
 .feature-img--item:last-child {
-  box-shadow: 0px 0px 18px 0px #7b6ef0;
+  box-shadow: 0px 0px 18px 0px #f7ce68;
 }
 
 .footer {
