--- a/style.scss
+++ b/style.scss
@@ -195,9 +195,8 @@ a {
   text-align: center;
   background-image: linear-gradient(
     0deg,
-    rgb(138, 126, 251) 0%,
-    rgb(247, 206, 104) 33%,
-    rgb(255, 255, 255) 66%,
+    rgb(251, 171, 126) 0%,
+    rgb(247, 206, 104) 50%,
     rgb(255, 255, 255) 100%
   );
   &__info {
@@ -228,7 +227,7 @@ a {
         box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
       }
       &:last-child {
-        box-shadow: 0px 0px 18px 0px #7b6ef0;
+        box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
       }
     }
   }
