--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ a {
 .footer__menu-title {
   font-weight: 600;
   margin: 2rem 0;
+  color: #257eba;
 }
 .footer__menu-desc {
   line-height: 1.5;
