--- a/style.scss
+++ b/style.scss
@@ -265,6 +265,7 @@ a {
     &-title {
       font-weight: 600;
       margin: 2rem 0;
+      color: #257eba;
     }
     &-desc {
       line-height: 1.5;
