--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.8rem;
   font-weight: 400;
 }
@@ -67,10 +67,10 @@ a {
   border: 0;
 }
 .btn--shadow {
-  box-shadow: 0px 0px 8px 0px;
+  box-shadow: 0 0 0 0.15px;
 }
 .btn--shadow:hover {
-  box-shadow: 0px 0px 12px 0px;
+  box-shadow: 0 0 0 0.2px;
   transition: all linear 0.25s;
 }
 .btn--rounded {
@@ -90,6 +90,8 @@ a {
   position: fixed;
   width: 100%;
   background-color: white;
+  left: 0;
+  right: 0;
   z-index: 15;
 }
 .header .header__inner {
