--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.8rem;
   font-weight: 400;
 }
@@ -58,6 +58,7 @@ a {
   padding-right: 2rem;
   margin: 0 auto;
 }
+
 .btn {
   cursor: pointer;
   outline: none;
@@ -68,9 +69,9 @@ a {
   display: inline-block;
   border: 0;
   &--shadow {
-    box-shadow: 0px 0px 8px 0px;
+    box-shadow: 0 0 0 0.15px;
     &:hover {
-      box-shadow: 0px 0px 12px 0px;
+      box-shadow: 0 0 0 0.2px;
       transition: all linear 0.25s;
     }
   }
@@ -100,6 +101,8 @@ a {
   position: fixed;
   width: 100%;
   background-color: white;
+  left: 0;
+  right: 0;
   z-index: 15;
   .header__inner {
     @include flex(center, space-between);
