--- a/style.scss
+++ b/style.scss
@@ -383,3 +383,20 @@ a {
     }
   }
 }
+
+@media screen and (max-width: 366px) {
+  .footer {
+    &__menu {
+      &-link {
+        &--desc {
+          h3 {
+            font-size: 1.3rem;
+          }
+          p {
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+  }
+}
