--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 a {
@@ -38,13 +37,13 @@ a {
 .wrapper::before {
   content: "";
   position: absolute;
-  height: 6000px;
-  width: 6000px;
-  top: 75%;
+  height: 10000px;
+  width: 10000px;
+  top: 72%;
   left: 50%;
   transform: translateX(-50%);
   background-image: linear-gradient(-45deg, white 0%, white 100%);
-  transition: 1.8s ease-in-out;
+  transition: 0.5s ease-in-out;
   border-radius: 50%;
   z-index: 2;
 }
@@ -77,11 +76,18 @@ a {
   border-radius: 5rem;
 }
 .btn--border {
-  border: 1px solid #000000f7;
-  background-color: #000000f7;
+  border: 1px solid #ffce56;
+  background-color: #ffce56;
 }
 .btn--act {
   border-radius: 5px;
+  width: 22rem;
+}
+
+.img-feature {
+  border-radius: 15px;
+}
+.img-footer {
   width: 22rem;
 }
 
@@ -186,6 +192,8 @@ a {
 .feature {
   margin-top: 8rem;
   text-align: center;
+  height: 70rem;
+  overflow: hidden;
   background-image: linear-gradient(0deg, #fbab7e 0%, #f7ce68 50%, white 100%);
 }
 .feature__info {
@@ -208,21 +216,15 @@ a {
   margin: 0 auto;
   margin-top: 5rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   flex-wrap: nowrap;
   flex-direction: row;
 }
 .feature-img--item {
-  width: 37.5rem;
-  height: 65.5rem;
+  width: 40.5rem;
+  height: 71.5rem;
   border-radius: 15px;
-}
-.feature-img--item:first-child {
-  box-shadow: 0px 0px 18px 0px #f7ce68;
-}
-.feature-img--item:last-child {
-  box-shadow: 0px 0px 18px 0px #f7ce68;
 }
 
 .footer {
@@ -290,6 +292,10 @@ a {
     top: 70%;
   }
 
+  .img-footer {
+    width: 18rem;
+  }
+
   .header__menu {
     display: none;
   }
@@ -307,7 +313,8 @@ a {
     width: 100%;
   }
   .feature-img--item {
-    width: 30rem;
+    width: auto;
+    height: auto;
   }
 
   .footer__menu-tem {
@@ -316,17 +323,25 @@ a {
 }
 @media screen and (max-width: 767px) {
   .wrapper::before {
-    top: 60%;
-    height: 2000px;
-    width: 2000px;
+    top: 57%;
+    height: 2500px;
+    width: 2500px;
   }
 
+  .img-footer {
+    width: 11rem;
+  }
+
+  .feature {
+    height: 38rem;
+  }
   .feature__info-title {
     font-size: 2.2rem;
     width: 100%;
   }
   .feature__info-desc {
     font-size: 1.4rem;
+    line-height: 1.4;
   }
   .feature-img--item {
     width: 45%;
@@ -340,7 +355,7 @@ a {
   .footer__menu-list {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: nowrap;
     flex-direction: row;
   }
@@ -364,6 +379,10 @@ a {
   }
 }
 @media screen and (max-width: 366px) {
+  .img-footer {
+    width: 11rem;
+  }
+
   .footer__menu-link--desc h3 {
     font-size: 1.3rem;
   }
