--- a/style.scss
+++ b/style.scss
@@ -24,8 +24,8 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
-  object-fit: cover;
+  // border-radius: 15px;
+  object-fit: contain;
 }
 
 a {
@@ -40,13 +40,13 @@ a {
   &::before {
     content: '';
     position: absolute;
-    height: 6000px;
-    width: 6000px;
-    top: 75%;
+    height: 10000px;
+    width: 10000px;
+    top: 72%;
     left: 50%;
     transform: translateX(-50%);
     background-image: linear-gradient(-45deg, white 0%, white 100%);
-    transition: 1.8s ease-in-out;
+    transition: 0.5s ease-in-out;
     border-radius: 50%;
     z-index: 2;
   }
@@ -79,11 +79,20 @@ a {
     border-radius: 5rem;
   }
   &--border {
-    border: 1px solid #000000f7;
-    background-color: #000000f7;
+    border: 1px solid #ffce56;
+    background-color: #ffce56;
   }
   &--act {
     border-radius: 5px;
+    width: 22rem;
+  }
+}
+
+.img {
+  &-feature {
+    border-radius: 15px;
+  }
+  &-footer {
     width: 22rem;
   }
 }
@@ -196,6 +205,8 @@ a {
 .feature {
   margin-top: 8rem;
   text-align: center;
+  height: 70rem;
+  overflow: hidden;
   background-image: linear-gradient(
     0deg,
     rgb(251, 171, 126) 0%,
@@ -221,17 +232,12 @@ a {
   &-img {
     margin: 0 auto;
     margin-top: 5rem;
-    @include flex(center, space-around);
+
+    @include flex(flex-start, space-around);
     &--item {
-      width: 37.5rem;
-      height: 65.5rem;
+      width: 40.5rem;
+      height: 71.5rem;
       border-radius: 15px;
-      &:first-child {
-        box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
-      }
-      &:last-child {
-        box-shadow: 0px 0px 18px 0px rgb(247, 206, 104);
-      }
     }
   }
 }
@@ -289,6 +295,12 @@ a {
     top: 70%;
   }
 
+  .img {
+    &-footer {
+      width: 18rem;
+    }
+  }
+
   .header {
     &__menu {
       display: none;
@@ -310,7 +322,8 @@ a {
     }
     &-img {
       &--item {
-        width: 30rem;
+        width: auto;
+        height: auto;
       }
     }
   }
@@ -326,12 +339,19 @@ a {
 
 @media screen and (max-width: 767px) {
   .wrapper::before {
-    top: 60%;
-    height: 2000px;
-    width: 2000px;
+    top: 57%;
+    height: 2500px;
+    width: 2500px;
+  }
+
+  .img {
+    &-footer {
+      width: 11rem;
+    }
   }
 
   .feature {
+    height: 38rem;
     &__info {
       &-title {
         font-size: 2.2rem;
@@ -339,6 +359,7 @@ a {
       }
       &-desc {
         font-size: 1.4rem;
+        line-height: 1.4;
       }
     }
     &-img {
@@ -356,7 +377,7 @@ a {
   .footer {
     &__menu {
       &-list {
-        @include flex(flex-start, space-between);
+        @include flex(flex-start, space-around);
       }
       &-item {
         width: 48%;
@@ -385,6 +406,12 @@ a {
 }
 
 @media screen and (max-width: 366px) {
+  .img {
+    &-footer {
+      width: 11rem;
+    }
+  }
+
   .footer {
     &__menu {
       &-link {
