--- a/style.scss
+++ b/style.scss
@@ -34,15 +34,15 @@ a {
 
 .wrapper {
   position: relative;
-  max-width: 140rem;
+  // max-width: 140rem;
   margin: 0 auto;
   overflow: hidden;
   &::before {
     content: '';
     position: absolute;
-    height: 10000px;
-    width: 10000px;
-    top: 72%;
+    height: 25000px;
+    width: 25000px;
+    top: 70%;
     left: 50%;
     transform: translateX(-50%);
     background-image: linear-gradient(-45deg, white 0%, white 100%);
