--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ a {
 .wrapper::before {
   content: "";
   position: absolute;
-  height: 20000px;
-  width: 20000px;
-  top: 70%;
+  height: 10000px;
+  width: 10000px;
+  top: 72%;
   left: 50%;
   transform: translateX(-50%);
   background-image: linear-gradient(-45deg, white 0%, white 100%);
@@ -191,7 +191,7 @@ a {
 .feature {
   margin-top: 12rem;
   text-align: center;
-  height: 70rem;
+  height: 80rem;
   overflow: hidden;
   background-image: linear-gradient(0deg, #fbab7e 0%, #f7ce68 50%, white 100%);
 }
@@ -212,7 +212,7 @@ a {
 }
 .feature-img {
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-top: 7rem;
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
@@ -386,6 +386,13 @@ a {
   }
   .footer__menu-link--desc p {
     font-size: 0.8rem;
+  }
+}
+@media screen and (min-width: 1367px) {
+  .wrapper::before {
+    width: 45000px;
+    height: 45000px;
+    top: 72%;
   }
 }
 
