--- a/style.scss
+++ b/style.scss
@@ -40,9 +40,9 @@ a {
   &::before {
     content: '';
     position: absolute;
-    height: 20000px;
-    width: 20000px;
-    top: 70%;
+    height: 10000px;
+    width: 10000px;
+    top: 72%;
     left: 50%;
     transform: translateX(-50%);
     background-image: linear-gradient(-45deg, white 0%, white 100%);
@@ -205,7 +205,7 @@ a {
 .feature {
   margin-top: 12rem;
   text-align: center;
-  height: 70rem;
+  height: 80rem;
   overflow: hidden;
   background-image: linear-gradient(
     0deg,
@@ -213,6 +213,8 @@ a {
     rgb(247, 206, 104) 50%,
     rgb(255, 255, 255) 100%
   );
+  &__item {
+  }
   &__info {
     &-title {
       line-height: 1.2;
@@ -232,7 +234,7 @@ a {
   }
   &-img {
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 7rem;
 
     @include flex(flex-start, space-around);
     &--item {
@@ -426,5 +428,13 @@ a {
         }
       }
     }
+  }
+}
+
+@media screen and (min-width: 1367px) {
+  .wrapper::before {
+    width: 45000px;
+    height: 45000px;
+    top: 72%;
   }
 }
