--- a/style.scss
+++ b/style.scss
@@ -106,7 +106,7 @@ a {
 }
 
 .header {
-  padding: 1rem 0;
+  padding: 0.8rem 0;
   position: fixed;
   width: 100%;
   background-color: white;
@@ -121,7 +121,7 @@ a {
       @include flex(center);
     }
     &-item {
-      margin-left: 5rem;
+      margin-left: 4.8rem;
     }
     &-link {
       font-size: 1.6rem;
@@ -142,25 +142,39 @@ a {
       z-index: 11;
       &-close {
         position: absolute;
-        width: 2rem;
-        height: 2rem;
-        top: 2rem;
-        right: 2rem;
+        width: 3rem;
+        height: 3rem;
+        top: 1.6rem;
+        right: 1.6rem;
+        cursor: pointer;
         .fas {
           font-size: 2rem;
           cursor: pointer;
         }
       }
       &-item {
-        margin-top: 2rem;
-        margin-left: 1rem;
+        margin-top: 1.6rem;
+        margin-left: 0.8rem;
         font-size: 1.8rem;
         font-weight: 300;
+        &:last-child {
+          p {
+            width: 100%;
+            text-align: center;
+          }
+        }
       }
       &-link {
+        @include flex(center);
         font-size: 1.6rem;
         font-weight: 400;
         color: #333;
+      }
+
+      &-image {
+        width: 25px;
+        height: 25px;
+        margin-right: 0.8rem;
       }
     }
   }
@@ -179,6 +193,8 @@ a {
 
   .toggle-icon {
     display: none;
+    width: 3rem;
+    height: 3rem;
   }
 
   @keyframes fadeIn {
@@ -203,7 +219,7 @@ a {
 }
 
 .feature {
-  margin-top: 12rem;
+  margin-top: 9.6rem;
   text-align: center;
   height: 80rem;
   overflow: hidden;
@@ -229,7 +245,7 @@ a {
       margin: 0 auto;
       width: 50%;
       font-size: 2rem;
-      margin-top: 1rem;
+      margin-top: 0.8rem;
     }
   }
   &-img {
@@ -276,7 +292,7 @@ a {
     }
     &-title {
       font-weight: 600;
-      margin: 2rem 0;
+      margin: 1.6rem 0;
       color: #257eba;
     }
     &-desc {
